--- a/docker/php/fs/etc/apache2/sites-available/000-default.conf
+++ b/docker/php/fs/etc/apache2/sites-available/000-default.conf
@@ -10,6 +10,11 @@
 
         ServerAdmin webmaster@localhost
         DocumentRoot /var/www/app/public/
+        <Directory /var/www/app/public>
+            AllowOverride None
+            Require all granted
+            FallbackResource /index.php
+        </Directory>
 
         # Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
         # error, crit, alert, emerg.
