--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.2'
 services:
   php-apache:
     ports:
-      - '80:80'
+      - '${APACHE_PORT:-8080}:80'
     networks:
       - test_network
     build: './docker/php'
@@ -11,8 +11,6 @@ services:
       - .:/var/www/
     working_dir: /var/www
   mysql:
-    ports:
-      - '3306:3306'
     networks:
       - test_network
     build: './docker/mysql'
