--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -4,10 +4,11 @@ ENV DEBIAN_FRONTEND=noninteractive
 COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
 RUN set -eux ;\
     apt-get update ;\
-    apt-get install -y zip p7zip-full libzip-dev;\
+    apt-get install -y zip p7zip-full libzip-dev libicu-dev ;\
     docker-php-ext-install \
         mysqli \
         pdo \
         pdo_mysql \
-        zip
+        zip \
+        intl
 COPY fs /
