--- a/app/composer.json
+++ b/app/composer.json
@@ -10,6 +10,8 @@
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.17",
+        "knplabs/knp-paginator-bundle": "^6.3",
+        "nesbot/carbon": "^1.17",
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
         "symfony/flex": "^2",
@@ -19,6 +21,8 @@
         "symfony/twig-bundle": "7.0.*",
         "symfony/webpack-encore-bundle": "^2.1",
         "symfony/yaml": "7.0.*",
+        "twig/extra-bundle": "^3.8",
+        "twig/intl-extra": "^3.8",
         "twig/twig": "^3.8"
     },
     "config": {
