feat(events): add create events to frontend + minor changes and improvements

--- a/app/config/frontend.yml
+++ b/app/config/frontend.yml
@@ -1,6 +1,7 @@
 parameters:
   frontend.navbar.items:
     Events: home
+    'New Event': events.create
   frontend.footer.features:
     'Cool stuff': '#'
     'Random feature': '#'
